# Kribton

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: zensical.toml
docs/.github/workflows/: docs.yml
docs/assets/: custom.css
docs/docs/: index.md
docs/site/: 404.html  index.html  search.json
src/anakonda/: __init__.py  core.py  request.py  response.py  route.py  router.py
src/anakonda/db/: base.py  base_query_manager.py  database.py
src/anakonda/db/asyncio/: database.py  query_manager.py
src/anakonda/models/: __init__.py
src/cli/: build.py  main.py  module_slice.py  new_module.py  renderer.py  scaffold.py  style.py  utils.py
src/cli/commands/: init.py  new.py
src/cli/templates/: main.jinja
src/cli/templates/migrations/: env.jinja
src/kribton/: __init__.py  core.py  request.py  route.py  router.py
src/kribton/db/: base_database.py
src/kribton/db/asyncio/: __init__.py  database.py  query_manager.py
src/kribton/models/: __init__.py  base.py  descriptor.py
