[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kribton"
version = "1.0.9"
authors = [
  { name="Ahmed Abdelkhaliq", email="abdelkhaliqqq@gmail.com" },
]
description = "A high-performance web framework for Python."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.18.5",
    "sqlalchemy>=2.0.51",
    "pydantic>=2.13.4",
    "typer>=0.26.7",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "uvicorn>=0.49.0",
    "click>=8.4.2",
    "greenlet>=3.5.2",
    "jinja2>=3.1.6",
    "mako>=1.3.12",
    "prompt-toolkit>=3.0.52",
    "typing-extensions>=4.15.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kribton*"]
